--- a/fitness-tracker/angular.json
+++ b/fitness-tracker/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-first-angular-project": {
+    "fitness-tracker": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/my-first-angular-project",
+            "outputPath": "dist/fitness-tracker",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-first-angular-project:build"
+            "browserTarget": "fitness-tracker:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "my-first-angular-project:build:production"
+              "browserTarget": "fitness-tracker:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "my-first-angular-project:build"
+            "browserTarget": "fitness-tracker:build"
           }
         },
         "test": {
@@ -113,16 +113,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "my-first-angular-project:serve"
+            "devServerTarget": "fitness-tracker:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "my-first-angular-project:serve:production"
+              "devServerTarget": "fitness-tracker:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "my-first-angular-project"
+  "defaultProject": "fitness-tracker"
 }
